WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235226
Frequent GPU process jetsams due to RemoteRenderingBackendProxy not claiming ownership of SharedMemory buffers
https://bugs.webkit.org/show_bug.cgi?id=235226
Summary
Frequent GPU process jetsams due to RemoteRenderingBackendProxy not claiming ...
Kimmo Kinnunen
Reported
2022-01-14 04:25:16 PST
Frequent GPU process jetsams due to RemoteRenderingBackendProxy not claiming ownership of SharedMemory buffers
Attachments
Patch
(5.15 KB, patch)
2022-01-14 08:14 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch
(5.69 KB, patch)
2022-01-14 12:21 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch
(5.15 KB, patch)
2022-01-15 03:52 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2022-01-14 08:14:31 PST
Created
attachment 449173
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2022-01-14 08:18:55 PST
<
rdar://problem/87601499
>
Simon Fraser (smfr)
Comment 3
2022-01-14 08:47:38 PST
Comment on
attachment 449173
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=449173&action=review
> Source/WebKit/Shared/ShareableBitmap.cpp:46 > + m_handle.takeOwnershipOfMemory(ledger);
Should this assert that m_handle has an m_port already (otherwise the call is a no-op)?
Kimmo Kinnunen
Comment 4
2022-01-14 12:21:56 PST
Created
attachment 449202
[details]
Patch
Kimmo Kinnunen
Comment 5
2022-01-15 03:52:44 PST
Created
attachment 449251
[details]
Patch
Kimmo Kinnunen
Comment 6
2022-01-15 03:53:43 PST
(In reply to Simon Fraser (smfr) from
comment #3
)
> Comment on
attachment 449173
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=449173&action=review
> > > Source/WebKit/Shared/ShareableBitmap.cpp:46 > > + m_handle.takeOwnershipOfMemory(ledger); > > Should this assert that m_handle has an m_port already (otherwise the call > is a no-op)?
Logically if ShareableBitmap should assert, so should SharedMemory. Filed
bug 235264
because of apparent existing bugs
EWS
Comment 7
2022-01-17 00:22:34 PST
Committed
r288090
(
246104@main
): <
https://commits.webkit.org/246104@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449251
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug